--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
-            --primary: #1a2332;
-            --secondary: #2563eb;
+            --primary: #237e79;
+            --secondary: #099b15;
             --accent: #f59e0b;
             --danger: #dc2626;
             --success: #059669;
