--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
-            --primary: #237e79;
-            --secondary: #099b15;
+            --primary: #0b046d;
+            --secondary: #092b9b;
             --accent: #f59e0b;
             --danger: #dc2626;
             --success: #059669;
-            --gradient-primary: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            --gradient-dark: linear-gradient(135deg, #1a2332 0%, #2563eb 100%);
+            --gradient-primary: linear-gradient(135deg, #0ee60e 0%, #20107a 100%);
+            --gradient-dark: linear-gradient(135deg, #1465f1 0%, #1e5713 100%);
             --shadow-soft: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
             --shadow-medium: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
             --shadow-large: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
