--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             --accent: #f59e0b;
             --danger: #dc2626;
             --success: #059669;
-            --gradient-primary: linear-gradient(135deg, #0ee60e 0%, #20107a 100%);
-            --gradient-dark: linear-gradient(135deg, #1465f1 0%, #1e5713 100%);
+            --gradient-primary: linear-gradient(135deg, #0ef006 0%, #084bdd 100%);
+            --gradient-dark: linear-gradient(135deg, #1577d3 0%, #60a81c 100%);
             --shadow-soft: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
             --shadow-medium: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
             --shadow-large: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
