--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhishGuard Pro - Formation Anti-Phishing Self-Hosted</title>
+    <title>PhishGuard Basic - Formation Anti-Phishing Self-Hosted</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -647,7 +647,7 @@
         <nav class="nav">
             <a href="#" class="logo">
                 <i class="fas fa-shield-alt"></i>
-                PhishGuard Pro
+                PhishGuard Basic
             </a>
         </nav>
     </header>
@@ -849,7 +849,8 @@
             <h2 class="cta-title">Prêt à renforcer votre sécurité ?</h2>
             <p class="cta-description">
                 Rejoignez les centaines d'entreprises qui ont réduit leurs risques cyber 
-                grâce à PhishGuard Pro. Solution open-source, déploiement rapide.
+                grâce à PhishGuard Basic. Solution open-source, déploiement rapide.
+                Existe aussi en Version Pro
             </p>
             <div class="cta-buttons">
                 <a href="https://github.com/Reaper-Official/cyber-prevention-tool" class="btn-primary">
@@ -864,7 +865,7 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <h3>PhishGuard Pro</h3>
+                    <h3>PhishGuard Basic</h3>
                     <p>
                         Solution open-source de formation anti-phishing pour entreprises. 
                         Sécurisez vos équipes avec des simulations réalistes et une formation adaptative.
@@ -886,7 +887,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 PhishGuard Pro. Projet open-source sous licence MIT.</p>
+                <p>&copy; 2025 PhishGuard Basic. Projet open-source sous licence MIT.</p>
             </div>
         </div>
     </footer>
