--- a/index.html
+++ b/index.html
@@ -867,9 +867,9 @@
                 <li><a href="#workflow">Processus</a></li>
                 <li><a href="#stats">Statistiques</a></li>
                 <li><a href="#features">Fonctionnalités</a></li>
-                <li><a href="#demo">Démo</a></li>
+                <li><a href="#install">Installer</a></li>
             </ul>
-            <a href="#demo" class="cta-nav">Essayer maintenant</a>
+            <a href="#install" class="cta-nav">Essayer maintenant</a>
         </nav>
     </header>
 
@@ -889,7 +889,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="#workflow" class="btn-primary">Découvrir le processus</a>
-                        <a href="#demo" class="btn-secondary">Voir la démo</a>
+                        <a href="#install" class="btn-secondary">Voir l'installation</a>
                     </div>
                 </div>
                 <div class="hero-visual">
@@ -1199,7 +1199,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="cta-section" id="demo">
+    <section class="cta-section" id="install">
         <div class="cta-container">
             <h2 class="cta-title">Prêt à renforcer votre sécurité ?</h2>
             <p class="cta-description">
