--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
             background: rgba(22, 27, 34, 0.6);
             border: 1px solid #30363d;
             border-radius: 12px;
-            padding: 48px;
+            padding: 12px;
             overflow-x: auto;
+            align-items: center;
         }
 
         /* Features */
