--- a/index.html
+++ b/index.html
@@ -258,6 +258,16 @@
             overflow-x: auto;
             align-items: center;
         }
+        .workflow-container .mermaid {
+            display: flex;
+            justify-content: center;
+        }
+
+        .workflow-container svg {
+            height: auto;
+            max-width: 100%;
+        }
+
 
         /* Features */
         .features-grid {
