--- a/index.html
+++ b/index.html
@@ -462,7 +462,9 @@
         <nav>
             <div class="container">
                 <div class="nav-content">
-                    <div class="logo">PhishGuard</div>
+                    <div class="logo">
+                          <img src="logo.png" alt="PhishGuard Logo">
+                    </div>
                     <div class="nav-links">
                         <a href="#features">Features</a>
                         <a href="#workflow">Platform</a>
