--- a/index.html
+++ b/index.html
@@ -463,8 +463,10 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-                          <img src="logo.png" alt="PhishGuard Logo">
-                    </div>
+  <img src="images/logo.png" alt="PhishGuard Logo">
+  <span>PhishGuard</span>
+</div>
+
                     <div class="nav-links">
                         <a href="#features">Features</a>
                         <a href="#workflow">Platform</a>
