--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-  <img src="images/logo.png" alt="PhishGuard Logo">
+  <img src="images/logo.png" alt="Logo">
   <span>PhishGuard</span>
 </div>
 
