--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhishGuard - Enterprise Anti-Phishing Platform</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://atlas-corporation.fr/favicon.ico">
-    <link rel="shortcut icon" href="https://atlas-corporation.fr/favicon.ico">
-    <link rel="apple-touch-icon" href="https://atlas-corporation.fr/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://reaper-official.github.io/favicon.ico">
+    <link rel="shortcut icon" href="https://reaper-official.github.io/favicon.ico">
+    <link rel="apple-touch-icon" href="https://reaper-official.github.io/favicon.ico">
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.6.1/mermaid.min.js"></script>
     <style>
