--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhishGuard - Enterprise Anti-Phishing Platform</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://reaper-official.github.io/favicon.ico">
-    <link rel="shortcut icon" href="https://reaper-official.github.io/favicon.ico">
-    <link rel="apple-touch-icon" href="https://reaper-official.github.io/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://reaper-official.github.io/cyber-prevention-tool/favicon.ico">
+    <link rel="shortcut icon" href="https://reaper-official.github.io/cyber-prevention-tool/favicon.ico">
+    <link rel="apple-touch-icon" href="https://reaper-official.github.io/cyber-prevention-tool/favicon.ico">
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.6.1/mermaid.min.js"></script>
     <style>
@@ -463,7 +463,7 @@
             <div class="container">
                 <div class="nav-content">
                     <div class="logo">
-  <img src="images/logo.png" alt="Logo">
+  <img src="https://reaper-official.github.io/cyber-prevention-tool/logo.png" alt="Logo">
   <span>PhishGuard</span>
 </div>
 
