--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
             align-items: center;
         }
 
-        .logo {
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: #58a6ff;
-            letter-spacing: -0.3px;
-        }
+        .logo img {
+    height: 40px;      /* adapte la taille à ta navbar */
+    display: block;
+}
+
 
         .nav-links {
             display: flex;
